# application

./: .gitignore  CMakeLists.txt  README.md  deploy.sh
dark_object_subtraction/: CMakeLists.txt  main.cpp
dem_diff/: CMakeLists.txt  main.cpp
height_check_control/: CMakeLists.txt  main.cpp
mde_diff/: main.cpp
