PROJECT( APPLICATION)
CMAKE_MINIMUM_REQUIRED( VERSION 2.8.4 )

SET( CMAKE_INSTALL_PREFIX $ENV{WS_INSTALL} )

INCLUDE_DIRECTORIES( $ENV{WS_INSTALL}/include )

FIND_LIBRARY( CANVAS canvas HINT $ENV{LD_LIBRARY_PATH} )

FIND_PACKAGE( CGAL REQUIRED COMPONENTS CGAL Core )
FIND_PACKAGE( Boost REQUIRED COMPONENTS filesystem system )

MESSAGE( "${CMAKE_CPP_FLAGS}" )

ADD_SUBDIRECTORY( dem_diff )
ADD_SUBDIRECTORY( height_check_control )
