PROJECT( APPLICATION)
CMAKE_MINIMUM_REQUIRED( VERSION 2.8.4 )

SET( CMAKE_INSTALL_PREFIX $ENV{WS_INSTALL} )

INCLUDE_DIRECTORIES( $ENV{WS_INSTALL}/include )

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -frounding-math -O3" )

FIND_LIBRARY( CANVAS canvas HINT $ENV{LD_LIBRARY_PATH} )
FIND_PACKAGE( CGAL REQUIRED COMPONENTS CGAL Core ImageIO )
FIND_PACKAGE( Boost REQUIRED COMPONENTS filesystem system )

ADD_SUBDIRECTORY( dem_diff )
ADD_SUBDIRECTORY( height_check_control )
