PROJECT( APPLICATION )
CMAKE_MINIMUM_REQUIRED( VERSION 2.8.4 )

SET( CMAKE_INSTALL_PREFIX $ENV{WS_INSTALL} )

INCLUDE_DIRECTORIES( $ENV{WS_INSTALL}/include )

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -frounding-math" )

FIND_PACKAGE( Boost REQUIRED COMPONENTS filesystem system )
FIND_LIBRARY( CANVAS canvas HINT $ENV{LD_LIBRARY_PATH} )

ADD_SUBDIRECTORY( dem_diff )
ADD_SUBDIRECTORY( height_check_control )
ADD_SUBDIRECTORY( dark_object_subtraction )
