# SET( SOURCES1
#     ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
#     PARENT_SCOPE )

ADD_EXECUTABLE( dem_diff main.cpp )

IF( CANVAS )
  TARGET_LINK_LIBRARIES( dem_diff ${CANVAS} )
ENDIF( CANVAS )

FIND_PACKAGE( Boost REQUIRED COMPONENTS filesystem system )

IF( Boost_FOUND )
  INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} )
  TARGET_LINK_LIBRARIES( dem_diff ${Boost_LIBRARIES} )
ENDIF( Boost_FOUND )

FIND_PACKAGE( CGAL REQUIRED COMPONENTS CGAL Core )

IF( CGAL_FOUND )
  INCLUDE_DIRECTORIES( ${CGAL_INCLUDE_DIRS} )
  TARGET_LINK_LIBRARIES( dem_diff ${CGAL_LIBRARIES} )
  IF( UNIX )
    SET( CMAKE_CPP_FLAGS "-frouding-math" )
  ENDIF( UNIX )
ENDIF( CGAL_FOUND )

FIND_LIBRARY( GMP gmp )
FIND_LIBRARY( MPFR mpfr )

TARGET_LINK_LIBRARIES( dem_diff ${GMP} )
TARGET_LINK_LIBRARIES( dem_diff ${MPFR} )

INSTALL( TARGETS dem_diff DESTINATION bin )
