ADD_EXECUTABLE( dem_diff main.cpp )

IF( CANVAS )
  TARGET_LINK_LIBRARIES( dem_diff ${CANVAS} )
ENDIF( CANVAS )

IF( CGAL_FOUND )
  INCLUDE_DIRECTORIES( ${CGAL_INCLUDE_DIRS} )
  TARGET_LINK_LIBRARIES( dem_diff ${CGAL_LIBRARIES} )
ENDIF( CGAL_FOUND )

IF( Boost_FOUND )
  INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} )
  TARGET_LINK_LIBRARIES( dem_diff ${Boost_LIBRARIES} )
ENDIF( Boost_FOUND )
