ADD_EXECUTABLE( height_check_control main.cpp )

IF( CANVAS )
  TARGET_LINK_LIBRARIES( height_check_control ${CANVAS} )
ENDIF( CANVAS )

IF( CGAL_FOUND )
  INCLUDE_DIRECTORIES( ${CGAL_INCLUDE_DIRS} )
  TARGET_LINK_LIBRARIES( height_check_control ${CGAL_LIBRARIES} )
ENDIF( CGAL_FOUND )

IF( Boost_FOUND )
  INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} )
  TARGET_LINK_LIBRARIES( height_check_control ${Boost_LIBRARIES} )
ENDIF( Boost_FOUND )
